//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  deletedAt DateTime
  password String [not null]
  name String [not null]
  phoneNumber String
  type AccountType
  avatarURL String
  EventAssignment EventAssignment [not null]
  AnnouncementItem AnnouncementItem [not null]
  Event Event [not null]
}

Table Location {
  id String [pk]
  locationLat Float [not null]
  locationLon Float [not null]
  address String [not null]
  city String [not null]
  name String
  Event Event [not null]
}

Table Event {
  id String [pk]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  deletedAt DateTime
  User User [not null]
  happeningAt DateTime [not null]
  description String
  thumbnailURL String
  setupComplete Boolean [not null, default: false]
  Location Location [not null]
  capacity Int [not null]
  sallaryType SallaryType [not null]
  sallaryAmount Float [not null]
  sallaryUnit String
  sallaryProductName String
  toolingRequired String
  toolingProvided String
  status EventStatus [not null, default: 'CREATED']
  EventAssignment EventAssignment [not null]
  AnnouncementItem AnnouncementItem [not null]
  HarmonogramItem HarmonogramItem [not null]
  userId String [not null]
  EventCategoryRelation EventCategoryRelation [not null]
  locationId String [not null]
}

Table EventAssignment {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  signedOffAt DateTime
  user User [not null]
  userId String [not null]
  event Event [not null]
  eventId String [not null]
  assignmentStatus EventAssignmentStatus [not null, default: 'ACTIVE']
  arrivedAt DateTime
  leftAt DateTime
  presenceStatus EventPresenceStatus [not null, default: 'NOT_PRESENT']
  hoursWorked Int
}

Table EventCategory {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  name String [not null]
  icon String [not null]
  colorVariant ColorVariant [not null, default: 'LIME']
  EventCategoryRelation EventCategoryRelation [not null]
}

Table EventCategoryRelation {
  id String [pk]
  Event Event [not null]
  eventId String [not null]
  EventCategory EventCategory [not null]
  eventCategoryId String [not null]
}

Table AnnouncementItem {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  event Event [not null]
  eventId String [not null]
  user User [not null]
  userId String [not null]
  message String [not null]
}

Table HarmonogramItem {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  from String [not null]
  to String [not null]
  title String [not null]
  description String
  event Event [not null]
  eventId String [not null]
}

Enum AccountType {
  HARVESTER
  ORGANISER
}

Enum SallaryType {
  MONEY
  GOODS
}

Enum EventStatus {
  CREATED
  PROGRESS
  ARCHIVED
  CANCELLED
}

Enum EventPresenceStatus {
  NOT_PRESENT
  DID_NOT_ARRIVE
  PRESENT
  LEFT
}

Enum EventAssignmentStatus {
  ACTIVE
  SIGNED_OFF
}

Enum ColorVariant {
  CHERRY
  LEMON
  LIME
  APPLE
  ORANGE
}

Ref: Event.userId > User.id

Ref: Event.locationId > Location.id

Ref: EventAssignment.userId > User.id

Ref: EventAssignment.eventId > Event.id

Ref: EventCategoryRelation.eventId > Event.id

Ref: EventCategoryRelation.eventCategoryId > EventCategory.id

Ref: AnnouncementItem.eventId > Event.id

Ref: AnnouncementItem.userId > User.id

Ref: HarmonogramItem.eventId > Event.id